bookinfo/networking/virtual-service-reviews-match-header-test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: ZhangSan
    route:
    - destination:
        host: reviews
        subset: v2  # When end-user is ZhangSan, only visit v2
  - route:
    - destination:
        host: reviews  # Other end-user, visit v1 and v3
        subset: v1
      weight: 50
    - destination:
        host: reviews
        subset: v3
      weight: 50
